--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.6.1"
   },
   "devDependencies": {
